[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orion"
version = "2.0.0"
description = "Orion - Automated Target Recognition of Military Vehicles"
readme = "README.md"
license = { text = "MIT" }
authors = [
    {name = "Jonas Renault", email = "jonasrenault@gmail.com"},
]
requires-python = ">=3.12"
dependencies = [
    "fiftyone>=1.9.0",
    "jupyterlab>=4.4.9",
    "lap>=0.5.12",
    "pydantic-settings>=2.11.0",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.1",
    "typer>=0.20.0",
    "ultralytics>=8.3.218",
]

[project.urls]
"Homepage" = "https://github.com/jonasrenault/orion#readme"
"Repository" = "https://github.com/jonasrenault/orion"

[project.scripts]
orion = "orion.cli.main:app"

[project.optional-dependencies]
logging = []
docs = [
    "mkdocs-material>=9.6.22",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]

[tool.black]
line_length = 90
target_version = ['py312']

[tool.ruff]
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
]
src = ["orion", "tests"]
line-length = 90

[tool.ruff.lint]
ignore = []
select = [
    "E",
    "F",
    "W",
    "I001",
]

[tool.ruff.lint.isort]
known-first-party = ["orion"]

[tool.mypy]
files = ["orion", "tests"]
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
    'ignore::DeprecationWarning',
]
